Revert "fix: shell size overflow"
This reverts commit 4b94c0af858afbdfee88208106a3261584be554c.

--- a/styles.css
+++ b/styles.css
@@ -683,7 +683,7 @@ button {
 }
 
 .screen-shell {
-    position: fixed;
+    position: absolute;
     image-rendering: pixelated;
     z-index: 5;
     scale: 3;
@@ -705,7 +705,7 @@ button {
 .dom-shell {
     width: 320px;
     height: 400px;
-    position: fixed;
+    position: absolute;
     background: 50% 50% / cover rgb(255, 237, 217);
     border-radius: 100% 100% 95% 95%;
     overflow: hidden;
